unpackaged/main/default/objects/Community_Footer_Items__mdt/Community_Footer_Items__mdt.object-meta.xml
<CustomObject>
    <description>Stores the URL or text that is displayed in the footer of the community, specific to each brand.</description>
    <label>Community Footer Items</label>
    <pluralLabel>Community_Footer_Items</pluralLabel>
</CustomObject>