unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Brand__c.field-meta.xml
<CustomField>
    <fullName>Brand__c</fullName>
    <description>Stores the Name of the Brand</description>
    <label>Brand</label>
    <referenceTo>Webform_Brands__mdt</referenceTo>
    <relationshipName>Community_Footer_Data</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>