unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Header__c.field-meta.xml
<CustomField>
    <fullName>Header__c</fullName>
    <description>Stores the column header label</description>
    <label>Header</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>