unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Header_SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>Header_SequenceNo__c</fullName>
    <label>Header SequenceNo.</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>