unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Item_SequenceNo__c.field-meta.xml
<CustomField>
    <fullName>Item_SequenceNo__c</fullName>
    <label>Item SequenceNo.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>