unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <description>Stores the label of the items in the footer</description>
    <label>Name</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>