unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Open_In_New_Tab__c.field-meta.xml
<CustomField>
    <fullName>Open_In_New_Tab__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Determines whether or not to open the URL in a new tab</description>
    <label>Open_In_New_Tab</label>
    <type>Checkbox</type>
</CustomField>