unpackaged/main/default/objects/Community_Footer_Items__mdt/fields/Value__c.field-meta.xml
<CustomField>
    <fullName>Value__c</fullName>
    <description>Stores the value of the footer items i.e, URL, text, number, etc.</description>
    <label>Value</label>
    <required>true</required>
    <type>TextArea</type>
</CustomField>