unpackaged/main/default/objects/Community_Footer_Items__mdt/listViews/NF_View.listView-meta.xml
<ListView>
    <fullName>NF_View</fullName>
    <columns>Brand__c</columns>
    <columns>MasterLabel</columns>
    <columns>Value__c</columns>
    <columns>Item_SequenceNo__c</columns>
    <columns>Header__c</columns>
    <columns>Header_SequenceNo__c</columns>
    <columns>Open_In_New_Tab__c</columns>
    <filterScope>Everything</filterScope>
    <label>NF View</label>
</ListView>